Added basic pages

--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -5,5 +5,5 @@
 {% block title %} Symfony React Project {% endblock %}
 
 {% block body %}
-    <div id="root"></div>
+    <div id="root" class="d-flex flex-column h-100"></div>
 {% endblock %}
