Added some static HTML

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,3 +2,6 @@
 @import "../../node_modules/bootstrap-icons";
 
 @import "global";
+
+@import "./components/product-list";
+@import "./components/product-detail";
