Added simple API requests with fetch function

--- a/assets/scss/components/_product-list.scss
+++ b/assets/scss/components/_product-list.scss
@@ -1,4 +1,9 @@
-.product-list__image {
-    width: 60px;
-    height: 60px;
+.product-list {
+    &__image > img{
+        width: 60px;
+    }
+
+    &__name {
+        width: 24rem;
+    }
 }
