--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -1,4 +1,9 @@
 html,
 body {
-  @extend .h-100;
+    @extend .h-100;
+}
+
+button.is-loading {
+    @extend .btn-light;
+    pointer-events: none;
 }
