--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -1,8 +1,6 @@
-{# ./templates/pages/index.html.twig #}
-
 {% extends 'base.html.twig' %}
 
-{% block title %} Symfony React Project {% endblock %}
+{% block title %} {{ appName }}{% endblock %}
 
 {% block body %}
     <div id="root" class="d-flex flex-column h-100"></div>
